--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Deploy to Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          GITHUB_TOKEN: ${{secrets.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}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           BRANCH: gh-pages
           FOLDER: deploy_dist/top_colleagues
